combine JP2 and JPLS with make (https://github.com/rordenlab/dcm2niix/issues/897#issuecomment-2566395564)

--- a/console/makefile
+++ b/console/makefile
@@ -59,7 +59,7 @@ debug:
 	g++ -O0 $(LFLAGS) $(UFILES)
 
 jp2:
-	g++ -O0 $(LFLAGS) $(CFILES) -I/opt/homebrew/Cellar/openjpeg/2.5.3/include/openjpeg-2.5/ -L/opt/homebrew/Cellar/openjpeg/2.5.3/lib/ -lopenjp2
+	g++ -O0 $(LFLAGS) $(CFILES)  $(JFLAGS) -I/opt/homebrew/Cellar/openjpeg/2.5.3/include/openjpeg-2.5/ -L/opt/homebrew/Cellar/openjpeg/2.5.3/lib/ -lopenjp2
 
 noroi:
 	g++ $(CFLAGS) -I. $(JSFLAGS) $(JFLAGS) $(LFLAGS) $(UFILES) -DmyNoRois
