--- a/console/makefile
+++ b/console/makefile
@@ -58,6 +58,7 @@ all:
 
 sanitize:
 	g++ -O1 -g -fsanitize=address -fno-omit-frame-pointer $(LFLAGS) $(UFILES)
+  #  -fstack-usage
 
 debug:
 	g++ -O0 $(LFLAGS) $(UFILES)
