--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,24 @@
 name: Release
-on: {push: {tags: ['v*.*.*']}}
+on: {push: {branches: [master], tags: [v*.*.*]}}
 jobs:
+  wheels:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        # macos-13 is an intel runner, macos-14 is apple silicon
+        os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, macos-13, macos-14]
+    steps:
+    - uses: actions/checkout@v4
+      with: {fetch-depth: 0, submodules: false}
+    - uses: pypa/cibuildwheel@2.x
+      with: {output-dir: dist}
+      env: {CIBW_ARCHS: auto64, CIBW_SKIP: pp*}  # skip 32bit & PyPy
+    - uses: actions/upload-artifact@v4
+      with:
+        name: wheels-${{ matrix.os }}-${{ strategy.job-index }}
+        path: ./dist/*.whl
   pypi:
+    needs: wheels
     permissions: {id-token: write}
     runs-on: ubuntu-latest
     steps:
@@ -9,5 +26,12 @@ jobs:
       with: {fetch-depth: 0, submodules: false}
     - uses: actions/setup-python@v5
       with: {python-version: '3.x'}
+    - uses: actions/download-artifact@v4
+      with:
+        pattern: wheels-*
+        path: dist
+        merge-multiple: true
     - uses: casperdcl/deploy-pypi@v2
-      with: {build: -s, upload: true}
+      with:
+        build: -s
+        upload: ${{ startsWith(github.ref, 'refs/tags/v') }}
