CI: test development branch

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,5 @@
 name: Release
-on: {push: {branches: [master], tags: [v*.*.*]}}
+on: {push: {branches: [development], tags: [v*.*.*]}}
 jobs:
   wheels:
     runs-on: ${{ matrix.os }}
