commits build setup from recent wasm tooling changes

--- a/pixi.toml
+++ b/pixi.toml
@@ -12,6 +12,7 @@ download = "wget https://github.com/uclouvain/openjpeg/archive/refs/tags/v2.5.3.
 extract = "tar -xvf v2.5.3.tar.gz"
 embuild-j2k = "cd openjpeg-2.5.3 && mkdir -p build && cd build && emcmake cmake .. -DCMAKE_BUILD_TYPE=Release && emmake make"
 clean = "rm -rf openjpeg-2.5.3 v2.5.3.tar.gz"
+publish-npm = { cmd = "cd ./js && npm run pub", depends-on = ["wasm"]}
 
 [dependencies]
 wget = ">=1.21.4,<2"
