--- a/pixi.toml
+++ b/pixi.toml
@@ -7,12 +7,16 @@ platforms = ["osx-arm64", "linux-64", "osx-64"]
 version = "0.1.0"
 
 [tasks]
-wasm = { cmd = "cd ./js && npm install && npm run build", depends-on = ["download", "extract", "embuild-j2k"] }
+wasm = { cmd = "cd ./js && npm install && npm run build", depends-on = [
+    "download",
+    "extract",
+    "embuild-j2k",
+] }
 download = "wget https://github.com/uclouvain/openjpeg/archive/refs/tags/v2.5.3.tar.gz"
 extract = "tar -xvf v2.5.3.tar.gz"
-embuild-j2k = "cd openjpeg-2.5.3 && mkdir -p build && cd build && emcmake cmake .. -DCMAKE_BUILD_TYPE=Release && emmake make"
+embuild-j2k = "cd openjpeg-2.5.3 && rm -rf build && mkdir -p build && cd build && emcmake cmake .. -DCMAKE_BUILD_TYPE=Release && emmake make"
 clean = "rm -rf openjpeg-2.5.3 v2.5.3.tar.gz"
-publish-npm = { cmd = "cd ./js && npm run pub", depends-on = ["wasm"]}
+publish-npm = { cmd = "cd ./js && npm run pub", depends-on = ["wasm"] }
 
 [dependencies]
 wget = ">=1.21.4,<2"
