--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@niivue/dcm2niix",
-  "version": "1.3.0-dev.0",
+  "version": "1.3.0",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "exports": {
