--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools_scm>=7", "scikit-build-core[pyproject]>=0.5"]
+requires = ["setuptools_scm>=7", "scikit-build-core>=0.11"]
 build-backend = "scikit_build_core.build"
 
 [tool.scikit-build]
